<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/descripcion"
            android:title="@string/descripcion" />
          <item
            android:id="@+id/naves"
            android:title="@string/naves" />

        <item
            android:id="@+id/objetos"
            android:title="@string/objetos" />

        <item
            android:id="@+id/tips"
            android:title="@string/tips" />
   <item
            android:id="@+id/ajustes"
            android:title="@string/ajustes" />
   <item
            android:id="@+id/salir"
            android:title="@string/salir" />

    </group>
</menu>